Why Web Development

--- a/index.html
+++ b/index.html
@@ -30,9 +30,61 @@
         </div>
 
         <br><br><br>
+        </div>
 
         
+        <div class="why-web-development-full-content">
+            <div>
+                <h1>Why Web Development??</h1>
+                <p>Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network). Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</p>
+            </div>
 
+            <div class="why-web-development-three-content">
+                <div class="why-web-development-First-content">
+                    <div >
+                        <h2>I will Do Coding and Change The World</h2>
+                        <p>Web development is the process of designing and building websites. It can be a combination of different skills like graphic design, programming, and web design. Web development typically involves using some programming language, for example, HTML and CSS.</p>
+                        <button>Learn More</button>
+                    </div>
+                    <div>
+                        <img src="./assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+
+
+
+
+                <div class="why-web-development-Second-content">
+                    <div>
+                        <img src="./assets/Group 3.png" alt="">
+                    </div>
+                    <div>
+                        <h2>I will help People by creating Modern Web System</h2>
+                        <p>Successful web development are development that solve unmet needs, are easy to use and have a simple yet powerful marketing process to get people in the door. </p>
+                        <button>Learn More</button>
+                    </div>
+
+
+                </div>
+
+
+                <div class="why-web-development-Third-content" >
+                    <div>
+                        <h2>I will Do Coding and Change The World</h2>
+                        <p>Web development is the process of designing and building websites. It can be a combination of different skills like graphic design, programming, and web design. Web development typically involves using some programming language, for example, HTML and CSS.</p>
+                        <button>Learn More</button>                       
+                    </div>
+                    <div>
+                        <img src="./assets/Group 4.png" alt="">
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+            
         </div>
     </main>
 </body>
