My-Inspiration-content

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
 
             
         </div>
+
+
+        <div class="My-Inspiration-full-box">
+            <div>
+                <h1>My Inspiration</h1>
+                <p>One of the most obvious ways to get inspired for your web design is to look at what other designers are doing. You can browse through online galleries, blogs, portfolios, and awards websites to see the latest and greatest examples of web design.</p>
+            </div>
+            <div class="ifreme-content-box">
+                <iframe class="content" width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=fdadE2UB2HK4rj4V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            </div>
+
+        </div>
+
+        
     </main>
 </body>
 </html>
