My-Current-Target-full-content

--- a/index.html
+++ b/index.html
@@ -100,7 +100,36 @@
 
         </div>
 
-        
+        <div class="My-Current-Target-full-box">
+            <div class="My-Current-Target">
+                <h1>My Current Target</h1>
+                <p>The target audience of web development can vary depending on the specific context and goals of the project. Here are some key target audiences for web development.</p>
+            </div>
+
+            <div class="My-Current-Target-three-box">
+                <div class="single-box">
+                    <img src="./assets/html.png" alt="" height="30px" width="40px">
+                    <h1>HTML</h1>
+                    <p>The more you practice, the better you become. Try to code something new every day, even if it's just a small project.</p>
+                    <span><a href="">Learn More</a> </span>
+                </div>
+
+                <div  class="single-box-two">
+                    <img src="./assets/css.png" alt="" height="30px" width="40px">
+                    <h1>CSS</h1>
+                    <p>Attend workshops and classes to learn from experts in the field. You can also join online courses to improve your skills.</p> <br>
+                    <span><a href="">Learn More</a> </span>
+                </div>
+                <div  class="single-box-three" >
+                    <img src="./assets/js.png" alt="" height="30px" width="40px">
+                    <h1>JavaScript</h1>
+                    <p>I’m in an interesting position at the moment, I’ve finished the JavaScript course on Codecademy and I don’t feel like I know anything.</p>
+                    <span><a href="">Learn More</a> </span>
+                </div>
+
+            </div>
+
+        </div>
     </main>
 </body>
 </html>
