support contact box

--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
             </div>
 
         </div>
-    </main>
+    </main> <br> <br>
+
+    <footer>
+        <div class="support-content">
+            <h1>I need Support</h1>
+            <p>Like any working group, a web development team needs to be productive. Otherwise, it’s just a gang of coding enthusiasts hanging out. Fun for them, but not so great for the company paying the wages.</p>
+
+            <div class="contact-box">
+                <input class="text-box" type="text" placeholder="Suggest me any feedback for me">
+                <input class="submit-button" type="submit">
+            </div>
+
+
+        </div> <br> <br><br>
+    </footer>
 </body>
 </html>
