--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="first-content-heading">
                 <h1>"In the near future, I hope to become a <br> Developer."</h1>
                 <p>For both businesses and developers, moving through this terrain can be like steering a ship in uncharted territory. Nevertheless, keeping up with trends and advancements is not just pleasurable; it is necessary. Through embracing tomorrow's web development, enterprises design user experiences that enthrall while assisting developers to unlock their potential thereby propelling them forward career-wise.</p>
-                <button >Contact with me</button>
+                <a href="#contact-social-media"><button  >Contact with me</button></a>
             </div>
 
         </div>
@@ -143,7 +143,27 @@
             </div>
 
 
+
+            </div>
+
+
         </div> <br> <br><br>
+        <div id="contact-social-media">
+        <div>
+            <h3>An Open Commitment by Helal Hossen</h3>
+        </div>
+
+        <div class="icon-content">
+           <a href="https://www.facebook.com/mdhelal.hossen.37051" target="_blank"> <img  src="./assets/facebook.png" alt="" > </a>  
+            
+            <a href="https://github.com/helal3419" target="_blank"><img src="./assets/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+
+        </div>
+            
+
+        </div>
     </footer>
+    <br><br><br><br>
 </body>
 </html>
